@@ -72,3 +72,33 @@
     width:100%;
 }
 
+.email-search-bar
+{
+    opacity:0.2;
+    transition-property:opacity;
+    transition-duration:.5s;
+}
+
+.email-search-bar:hover
+{
+    opacity:1;
+    transition-property:opacity;
+    transition-duration:.5s;
+}
+
+.email-search-bar *,
+.email-search-bar input[type=button]
+{
+    box-shadow:3px 3px 3px rgba(0,0,0,0);
+    transition-property:box-shadow;
+    transition-duration:.5s;
+}
+
+.email-search-bar:hover *,
+.email-search-bar:hover input[type=button]
+{
+    box-shadow:3px 3px 3px rgba(0,0,0,.5);
+    transition-property:box-shadow;
+    transition-duration:.5s;
+}
+
